discussion/kv_engine/129937/129937_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch mad-hatter into master

* commit 'e47bcf42':
  MB-37374: Log IncludeDeletedUserXattrs enabled at dcp_open_executor
  MB-37374: DelWithMeta accepts user-xattrs in the payload
  MB-37680: Schedule backfill of snap_markers ASAP

Change-Id: Ie1fbc6571b1acdb950e7f9adb18fe3fdeaf728af

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-06-10 11:48:02.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2020-06-10 11:50:02.000000000
Message: 
Patch Set 4:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-10 11:51:56.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28473/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28473/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11916/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24493/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: no member named "remove_prefix" in "cb::sized_buffer<const unsigned char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24493/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2669/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:5681:23: error: no member named "remove_prefix" in "cb::sized_buffer<const unsigned char>" [clang-diagnostic-error]
                value.remove_prefix(cb::xattr::get_body_offset(valBuffer));
                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2669/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: no member named "remove_prefix" in "cb::sized_buffer<const unsigned char>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2669/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3146/ : FAILURE

Compile error at [2020-06-10T11:50:02.719Z] ../kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: no member named "remove_prefix" in "cb::sized_buffer<const unsigned char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4038/ : FAILURE

Compile error at [2020-06-10T11:49:12.146Z] ../kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: ?struct cb::sized_buffer<const unsigned char>? has no member named ?remove_prefix?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4082/ : FAILURE

Compile error at [2020-06-10T11:50:18.315Z] ../kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: ?struct cb::sized_buffer<const unsigned char>? has no member named ?remove_prefix?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4082/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4169/ : FAILURE

Compile error at [2020-06-10T11:51:02.081Z] ../kv_engine/engines/ep/src/ep_engine.cc:5681:23:
error: ?struct cb::sized_buffer<const unsigned char>? has no member named ?remove_prefix?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4169/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1173/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
